feat: query by student address and qr string generation
